user role flow